--- a/templates/userSettings.twig
+++ b/templates/userSettings.twig
@@ -1,13 +1,12 @@
 <div piwik-content-block content-title="{{ 'LoginOIDC_OpenIDConnect'|translate }}">
 
   <p>
-    {{ 'LoginOIDC_OIDCIntro'|translate('<a href="https://openid.net/connect/" rel="noreferrer noopener">', '</a>')|raw }}
+    {{ 'LoginOIDC_OIDCIntro'|translate }}
   </p>
 
   {% if isLinked %}
     <p>
-      <strong>{{ 'LoginOIDC_AccountLinked'|translate }}</strong>
-      Remote User ID: abc...
+      <strong>{{ 'LoginOIDC_AccountLinked'|translate(remoteUserId) }}</strong>
       <br />
       <br />
       <a class="red lighten-2 btn btn-link" href="{{ linkTo({'module': 'LoginOIDC', 'action': 'unlink'}) }}">{{ 'LoginOIDC_Unlink'|translate }}</a>
