--- a/templates/userSettings.twig
+++ b/templates/userSettings.twig
@@ -1,33 +1,35 @@
+{# This is rendered in the users settings menu as a separate card #}
+
 <div piwik-content-block content-title="{{ 'LoginOIDC_OpenIDConnect'|translate }}">
 
-  <p>
-    {{ 'LoginOIDC_OIDCIntro'|translate }}
-  </p>
+    <p>
+        {{ 'LoginOIDC_OIDCIntro'|translate }}
+    </p>
 
-  {% if isLinked %}
-    <p>
-      <strong>{{ 'LoginOIDC_AccountLinked'|translate(remoteUserId) }}</strong>
-      <br />
-      <br />
-      <form method="post" action="{{ linkTo({'module': 'LoginOIDC', 'action': 'unlink'}) }}">
-        <input type="hidden" name="form_nonce" value="{{ nonce }}"/>
-        <button class="red lighten-2 btn" type="submit">
-          {{ 'LoginOIDC_Unlink'|translate }}
-        </button>
-      </form>
-    </p>
-  {% else %}
-    <p>
-      <strong>{{ 'LoginOIDC_AccountNotLinked'|translate }}</strong>
-      <br />
-      <br />
-      <form method="post" action="{{ linkTo({'module': 'LoginOIDC', 'action': 'signin'}) }}">
-        <input type="hidden" name="form_nonce" value="{{ nonce }}"/>
-        <button class="btn" type="submit">
-          {{ 'LoginOIDC_Link'|translate }}
-        </button>
-      </form>
-    </p>
-  {% endif %}
+    {% if isLinked %}
+        <p>
+            <strong>{{ 'LoginOIDC_AccountLinked'|translate(remoteUserId) }}</strong>
+            <br />
+            <br />
+            <form method="post" action="{{ linkTo({'module': 'LoginOIDC', 'action': 'unlink'}) }}">
+                <input type="hidden" name="form_nonce" value="{{ nonce }}" />
+                <button class="red lighten-2 btn" type="submit">
+                    {{ 'LoginOIDC_Unlink'|translate }}
+                </button>
+            </form>
+        </p>
+        {% else %}
+        <p>
+            <strong>{{ 'LoginOIDC_AccountNotLinked'|translate }}</strong>
+            <br />
+            <br />
+            <form method="post" action="{{ linkTo({'module': 'LoginOIDC', 'action': 'signin'}) }}">
+                <input type="hidden" name="form_nonce" value="{{ nonce }}" />
+                <button class="btn" type="submit">
+                    {{ 'LoginOIDC_Link'|translate }}
+                </button>
+            </form>
+        </p>
+    {% endif %}
 
 </div>
